# c_packages

basic_math_func/: README.md  pubspec.yaml
basic_math_func/example/: example.dart
basic_math_func/lib/: shelf.dart
basic_math_func/lib/src/: func.dart  func_enum.dart
basic_math_func/native_codes/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libnative.so.1.0.0  native.c  native.def  native.h  native_test
